try a object in zustend

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,9 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  @apply bg-[#222831] text-[#DFD0B8] font-mono box-border p-0 m-0 
+  
 }
-
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+.header-list{
+  @apply text-2xl mt-6 p-2 border-[#948979] border-2  place-items-center hover:text-[#948979]
 }
